--- a/paper/scilBibTex.bib
+++ b/paper/scilBibTex.bib
@@ -12133,7 +12133,7 @@ year = {2013}
 
 @article{van_numpy:11,
   title={The NumPy array: a structure for efficient numerical computation},
-  author={Van Der Walt, Stefan and Colbert, SChris and Varoquaux, Gael},
+  author={Van Der Walt, Stefan and Colbert, S. Chris and Varoquaux, Gael},
   journal={Computing in Science \& Engineering},
   volume={13},
   number={2},
